Fix logo not rendering on iOS (+1 squashed commit) Squashed commits: [98ad303] Add missing logo

--- a/web/app/themes/radcliffe/style.css
+++ b/web/app/themes/radcliffe/style.css
@@ -413,13 +413,14 @@ body {
 }
 
 .vc-logo {
+  background-image: url('/app/themes/radcliffe/images/logo-white.png');
   background-repeat: no-repeat;
   background-size: contain;
   content: '';
   display: block;
-  height: 100%;
+  height: 40px;
   margin-right: .5em;
-  width: 62px;
+  width: 80px;
 }
 
 .blog-title a {
@@ -3180,10 +3181,6 @@ ol.accordion-with-icons--preview {
 @media (max-width: 500px) {
 
 	body { font-size: 15px; }
-
-  .vc-logo {
-    width: 53px;
-  }
 
   .blog-title::before {
     height: 35px;
